<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/activity_view"
        android:layout_toLeftOf="@id/secondview"
        android:orientation="vertical">
        <Spinner
            android:id = "@+id/activity_type_spinner"
            android:layout_width = "match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/secondview"
        android:visibility="gone"
        android:layout_margin="2dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/food_view"
        android:layout_toRightOf="@id/secondview"
        android:layout_toLeftOf="@id/fourthview"
        android:orientation="vertical"
        android:visibility="gone">


        <!-- Food related views -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/food_amount_edittext"
            android:inputType = "number"
            android:hint="1234"
            android:layout_margin="8dp"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/food_metrics_spinner"
            android:layout_margin="8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/food_brand_edittext"
            android:hint="Food Brand"
            android:layout_margin="8dp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/calories_eaten_edittext"
            android:inputType = "number"
            android:hint="12345"
            android:layout_margin="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calories"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/calories_eaten_edittext"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bathroom_view"
        android:layout_toLeftOf="@id/secondview"
        android:layout_toRightOf="@id/fourthview"
        android:visibility="gone">
        <!-- Bathroom related views -->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/bathroom_type_spinner"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/vet_view"
        android:layout_toLeftOf="@id/secondview"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <!-- Vet related views -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/vet_address_edittext"
            android:hint="Vet Location/Address"
            android:layout_margin="4dp"/>

        <EditText
            android:id="@+id/vet_reason_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Reason for visit"
            android:layout_margin="8dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fourthview"
        android:visibility="gone"
        android:layout_toRightOf="@id/fifthview"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/middle_view"
        android:layout_toLeftOf="@id/activity_view"
        android:layout_toRightOf="@id/fifthview"
        android:layout_margin="2dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fifthview"
        >
        <Button
            android:id = "@+id/new_activity_submit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text = "Submit"
            android:layout_margin="4dp"
            />
    </LinearLayout>
</LinearLayout>