...
    <string name="prompt_fName">First Name</string>
    <string name="prompt_lName">Last Name</string>
    <string name="prompt_family_name">Family Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
...
    <string name="dog_id">Dog I.D.</string>
    <string name="dog_name">Dog Name</string>
    <string name="save_changes_button">Save Changes</string>

    <!-- Strings related to home screen -->
    <string name="map_button">Map</string>
    <string name="finish_walk_button">Finish Walk</string>
    <string name="new_activity_button">New Activity</string>
    <string name="manage_dogs_button">Manage Dogs</string>
    <string name="add_dog_button">Add Dog</string>
    <string name="family_button">Family</string>
    <string name="settings_button">Settings</string>
    <string name="log_out_button">Log Out</string>

...

    <!-- Strings related to Maps-->
    <string name="mapbox_key">pk.eyJ1IjoiYnVja2V5ZWRyYWtlIiwiYSI6ImNqbnh3cnBvdTBocTUzcG1rNHhmNDViaXQifQ.wN5uJWha3y_wSVp1d0yGzA</string>
    <string name="directions">To plan a route, tap up to 12 spots along the desired route. To clear the points, long press on the screen.</string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>
    <string name="begin_walk">Begin Walk</string>

    <!-- Strings related to FamilyMainFragment -->
    <string name="families_button">Families</string>
    <string name="invitations_button">Invitations</string>
    <string name="create_new_family_button">Create New Family</string>

...
